Thu Jul 11 14:22:37 2013  Zachary Scott  <e@zzak.io>

	* test/drb/ut_eq.rb: Use localhost for drb tests [Bug #7311]
	  Patch by Vit Ondruch [ruby-core:49101]
	* test/drb/ut_array.rb: ditto
	* test/drb/ut_array_drbssl.rb: ditto

Thu Jul 11 13:48:03 2013  Zachary Scott  <e@zzak.io>

	* sprintf.c: Fix typo patch by @hynkle [Fixes GH-357]
	  https://github.com/ruby/ruby/pull/357

Thu Jul 11 13:00:34 2013  Zachary Scott  <e@zzak.io>

	* lib/securerandom.rb: Refactor conditions by Rafal Chmiel
	  [Fixes GH-326] https://github.com/ruby/ruby/pull/326

Thu Jul 11 12:04:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Don't use toom3 after once karatsuba is choosen.
	  (mulfunc_t): New type.
	  (bary_mul_toom3_start): Renamed from bary_mul.
	  (bary_mul_karatsuba_start): Renamed from bary_mul.
	  (bary_mul_balance_with_mulfunc): Renamed from bary_mul_balance and
	  new argument, mulfunc, is added.
	  (rb_big_mul_balance): Invoke bary_mul_balance_with_mulfunc with
	  bary_mul_toom3_start.
	  (bary_mul_karatsuba): Invoke bary_mul_karatsuba_start instead of
	  bary_mul.
	  (bary_mul_precheck): Extracted from bary_mul.
	  (bary_mul_karatsuba_branch): Extracted from bary_mul.
	  (bary_mul_karatsuba_start): New function to call bary_mul_precheck
	  and bary_mul_karatsuba_branch.
	  (bary_mul_toom3_branch): Extracted from bary_mul.
	  (bary_mul_toom3_start): New function to call bary_mul_precheck and
	  bary_mul_toom3_branch.
	  (bary_mul): Just call bary_mul_toom3_start.
	  Arguments for work memory are removed.
	  (rb_cstr_to_inum): Follow the bary_mul change.
	  (bigmul0): Ditto.

Thu Jul 11 10:46:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/probes_to_wiki.rb: fix usage comment.  use Enumerable#grep
	  which yields each elements to reduce unnecessary array.

Thu Jul 11 10:09:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (rb_daemon): daemon(3) is implemented with fork(2).
	  Therefore it needs rb_thread_atfork(). (and revert r41903)
